fix(thumbs): increase gap between icons
At least 0.5rem between clickable elements.

--- a/client/src/ui/atoms/thumbs/index.scss
+++ b/client/src/ui/atoms/thumbs/index.scss
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   flex-direction: row;
-  gap: 0.1rem;
+  gap: 0.5rem;
 
   .confirmation {
     animation-duration: 2.5s;
